[package]
name = "sshpass"
version = "0.1.0"
edition = "2021"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
description = "sshpass"
keywords = ["sshpass"]
readme = "README.md"
repository = "https://github.com/baoyachi/sshpass-rs"
documentation = "https://docs.rs/sshpass"
homepage = "https://github.com/baoyachi/sshpass-rs"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
